Fix previous commit

--- a/src/main/resources/org/dpctl/reference.properties
+++ b/src/main/resources/org/dpctl/reference.properties
@@ -15,7 +15,7 @@ output-format=txt
 include-files=.*
 include-objects=.*
 exclude-files=(webgui/.*|config/.*)
-exclude-objects=".*/__.*__"
+exclude-objects=.*/__.*__
 
 push-format=XML
 push-dry-run=false
