change exit code to 1 when error response

--- a/src/main/resources/org/dpctl/reference.properties
+++ b/src/main/resources/org/dpctl/reference.properties
@@ -12,6 +12,8 @@ dp-configuration-version=3
 output-stylesheet=classpath:org/dpctl/stylesheets/output.xsl
 output-format=txt
 
+error-check=(<error-log>|<dp:result>ERROR</dp:result>)
+
 include-files=.*
 include-objects=.*
 exclude-files=(webgui/.*|config/.*)
