allow configurable http connect and read timeouts with defaults

--- a/src/main/resources/org/dpctl/reference.properties
+++ b/src/main/resources/org/dpctl/reference.properties
@@ -31,3 +31,6 @@ pull-format=XML
 pull-all-files=true
 pull-objects-class=all-classes
 pull-objects-name=all-objects
+
+http-connect-timeout=60000
+http-read-timeout=600000
